--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ng-annotate-loader": "^0.6.1",
+    "node-sass": "^4.13.1",
     "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2",
