--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "ng-annotate-loader": "^0.6.1",
     "node-sass": "^4.13.1",
     "rimraf": "^3.0.0",
